--- a/zonos-api/pyproject.toml
+++ b/zonos-api/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "human-presentator"
+name = "zonos-api"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
