--- a/memo-api/pyproject.toml
+++ b/memo-api/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "memo",
+    "uvicorn>=0.34.3",
 ]
 
 [tool.uv.sources]
