--- a/zonos-api/Dockerfile
+++ b/zonos-api/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # build dependencies
 RUN apt-get update \
- && apt-get install -y --no-install-recommends git ca-certificates \
+ && apt-get install -y --no-install-recommends git ca-certificates build-essential python3-dev \
  && rm -rf /var/lib/apt/lists/*
 
 # memo dependencies
