--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   zonos-api:
     build:
@@ -8,6 +7,10 @@ services:
       - "8001:8000"
     networks:
       - web
+    runtime: nvidia
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
   memo-api:
     build:
@@ -17,6 +20,10 @@ services:
       - "8002:8000"
     networks:
       - web
+    runtime: nvidia
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
 networks:
   web:
