--- a/presentor-vue/.env
+++ b/presentor-vue/.env
@@ -1,3 +1,3 @@
-VITE_ZONOS_API_URL=http://localhost:8001
-VITE_MEMO_API_URL=http://localhost:8002
+VITE_ZONOS_API_URL=http://zonos-api:8000
+VITE_MEMO_API_URL=http://memo-api:8000
 
