--- a/presentation/package.json
+++ b/presentation/package.json
@@ -6,7 +6,8 @@
     "build": "slidev build",
     "dev": "slidev --open",
     "export": "slidev export",
-    "start": "http-server dist -p 8080 -c-1 --proxy 'http://localhost:8080?'"
+    "start": "http-server dist -p 8080 -c-1 --proxy 'http://localhost:8080?'",
+    "build-and-start": "npm run build && npm run start"
   },
   "dependencies": {
     "@slidev/cli": "^52.0.0",
