--- a/presentation/package.json
+++ b/presentation/package.json
@@ -14,6 +14,7 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "chart.js": "^4.5.0",
+    "gsap": "^3.13.0",
     "vue": "^3.5.18",
     "vue-chartjs": "^5.3.2",
     "vuetify": "^3.9.2"
